Made the Website Icon

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>StayHydrated - App Listing</title>
+    <title>StayHydrated</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/icon.png" type="image/png">
 </head>
 <body>
 <div class="container">
