--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="img/icon.png" alt="App Icon">
             <h1>StayHydrated</h1>
         </div>
-        <a class="download-button" href="StayHydrated.apk" download>Download APK</a>
+        <a class="download-button" href="https://github.com/kollert-bzz/StayHydrated" download>Download APK</a>
     </div>
 
     <div class="screenshots">
